# docker-nsupdate-ddns

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  LICENSE.md  Pipfile  README.md  config.sample  main.py  make.sh  pyproject.toml  sample.config.env
.github/workflows/: main.yml
docker_nsupdate_ddns/: default.config.env  main.py
docker_nsupdate_ddns/lib/: __init__.py  container.py  nsupdate.py
lib/: container.py  nsupdate.py
